sdf first shopify function test
